# rviz2_imu_display_plugin

./: CLAUDE.md  CMakeLists.txt  README.md  f16_hud_plan .md  plugins_description.xml
config/: hud_config.rviz
include/f16_hud_rviz_plugin/: f16_hud_display.hpp  f16_hud_visual.hpp  imu_processor.hpp
install/: local_setup.sh  setup.sh
install/f16_hud_rviz_plugin/lib/f16_hud_rviz_plugin/: imu_test_publisher
install/f16_hud_rviz_plugin/share/ament_index/resource_index/package_run_dependencies/: f16_hud_rviz_plugin
install/f16_hud_rviz_plugin/share/ament_index/resource_index/parent_prefix_path/: f16_hud_rviz_plugin
install/f16_hud_rviz_plugin/share/f16_hud_rviz_plugin/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/f16_hud_rviz_plugin/share/f16_hud_rviz_plugin/cmake/: ament_cmake_export_dependencies-extras.cmake  f16_hud_rviz_pluginConfig.cmake
launch/: hud_demo.launch.py
log/: latest_build
src/: f16_hud_display.cpp  f16_hud_visual.cpp  imu_processor.cpp  imu_test_publisher.cpp
